--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,3 +1,1 @@
-<img [src]="coracaoVazio"/>
-<img [src]="coracaoVazio"/>
-<img [src]="coracaoVazio"/>
+<img *ngFor= "let coraco of coracoes" [src]="coraco.exibeCoracao()" />
