--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,27 @@
 <app-topo></app-topo>
-<app-painel></app-painel>
+
+  <div *ngIf="jogoEmAndamento; else fimDeJogo">
+    <app-painel  (encerrarJogo)="encerrarJogo($event)"></app-painel>
+  </div>
+
+  <ng-template #fimDeJogo>
+    <div *ngIf="tipoEncerramento === 'derrota'; else fimDeJogoVitoria" class="container" style="margin-top: 50px">
+      <div class="row">
+          <div class="col">
+              <h3 style="color: red">Fim de Jogo, infelizmente você perdeu :s</h3>
+              <button type="button" class="btn btn-outline-primary" (click)="reiniciarJogo()">Reiniciar</button>
+          </div>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template #fimDeJogoVitoria>
+    <div class="container" style="margin-top: 50px">
+      <div class="row">
+        <div class="col">
+          <h3 style="color: green">Fim de Jogo, Você ganhou :D</h3>
+          <button type="button" class="btn btn-outline-primary" (click)="reiniciarJogo()">Reiniciar</button>
+        </div>
+      </div>
+    </div>
+  </ng-template>
